refactory: change popsicles to products domain
